--- a/monitoring/grafana/provisioning/datasources/datasource.yml
+++ b/monitoring/grafana/provisioning/datasources/datasource.yml
@@ -6,3 +6,15 @@ datasources:
     access: proxy
     url: http://prometheus:9090
     isDefault: true
+
+  - name: InfluxDB
+    type: influxdb
+    access: proxy
+    url: http://influxdb:8086
+    jsonData:
+      version: Flux
+      organization: brewery
+      defaultBucket: brewery
+      tlsSkipVerify: true
+    secureJsonData:
+      token: BenFra2020!!
