--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -4,12 +4,16 @@ global:
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ["prometheus:9090"]
 
   - job_name: "node"
     static_configs:
-      - targets: ["localhost:9100"]
+      - targets: ["node-exporter:9100"]
 
   - job_name: "docker"
     static_configs:
       - targets: ["cadvisor:8085"]
+
+  - job_name: "telegraf"
+    static_configs:
+      - targets: ["telegraf:9273"]
