--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -8,12 +8,12 @@ scrape_configs:
 
   - job_name: "node"
     static_configs:
-      - targets: ["node-exporter:9100"]
+      - targets: ["tasks.node-exporter:9100"]
 
   - job_name: "docker"
     static_configs:
-      - targets: ["cadvisor:8085"]
+      - targets: ["tasks.cadvisor:8080"]
 
   - job_name: "telegraf"
     static_configs:
-      - targets: ["telegraf:9273"]
+      - targets: ["tasks.telegraf:9273"]
